[package]
name = "ssd1320"
version = "0.1.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics-core = { version = "0.3", optional = true }


[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f401"]}
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
embedded-graphics = "0.7"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.release]
# Many of these settings are highly recommended or required for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true